fix column label alignment

--- a/src/components/asteroidsTable/style.css
+++ b/src/components/asteroidsTable/style.css
@@ -83,6 +83,7 @@
   display: flex;
   align-items: center;
   gap: 8px;
+  padding: 0;
 
   background: unset;
   color: unset;
